--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <title>Player de Música</title>
 </head>
 <body>
+    <div class="music-container">
+
     <main>
-        <h5>Playlist</h5>
-        <div id="image-song">
-            <img src="img/november.jpeg"></img>
+        <h5 id="playlist">Playlist</h5>
+        <div>
+            <img id="cover" src="img/november.jpeg"></img>
         </div>
-        <div id="below">
+        <div id="info-cover">
             <div id="song-info">
-                <div>Nome da Música</div>
-                <div>Nome da Banda</div>
+                <div id="song-name">Nome da Música</div>
+                <div id="band-name">Nome da Banda</div>
             </div>
             <div id="like" class="button"><i class="bi bi-heart"></i></div>
         </div>
@@ -29,8 +31,8 @@
             <div id="next" class="button button-navigate"><i class="bi bi-fast-forward-fill"></i></div>
             <div id="repeat" class="button"><i class="bi bi-repeat"></i></div>
         </main>
-        
-        
+        </div>
+
     </div>
 </body>
 </html>
